# kbauto

./: .gitignore  Cargo.toml  LICENSE  README.md  quickstart.md
.github/workflows/: rust.yml
crates/kbauto-cli/: Cargo.toml
crates/kbauto-cli/src/: diff.rs  generate.rs  main.rs  output.rs  progress.rs  rebase.rs  schema.rs  tui.rs  update.rs  wizard.rs
crates/kbauto-cli/tests/: e2e_test.rs  output_test.rs  progress_test.rs  rebase_contract_test.rs  wizard_e2e_test.rs  wizard_test.rs
crates/kbauto-config/: Cargo.toml
crates/kbauto-config/src/: lib.rs
crates/kbauto-customise/: Cargo.toml
crates/kbauto-customise/src/: discovery_questions.rs  lib.rs  ollama.rs  prompt.rs  retry.rs  rewriter.rs
crates/kbauto-customise/tests/: rewriter_test.rs
crates/kbauto-placeholder/: Cargo.toml
crates/kbauto-placeholder/src/: defaults.rs  extract.rs  lib.rs  resolve.rs  types.rs  version.rs
crates/kbauto-placeholder/tests/: defaults_test.rs  extract_test.rs  format_type_test.rs  resolve_test.rs  version_test.rs
crates/kbauto-provenance/: Cargo.toml
crates/kbauto-provenance/src/: classification.rs  frontmatter.rs  lib.rs  merge.rs  paragraph.rs
crates/kbauto-provenance/tests/: classification_test.rs  frontmatter_test.rs  paragraph_test.rs
crates/kbauto-rebase/: Cargo.toml
crates/kbauto-rebase/src/: conflict.rs  diff.rs  lib.rs  rebase.rs  resolve.rs
crates/kbauto-rebase/tests/: diff_report_test.rs  diff_test.rs  rebase_test.rs  resolve_test.rs
crates/kbauto-template/: Cargo.toml
crates/kbauto-template/src/: affect.rs  brief.rs  brief_diff.rs  details.rs  discovery.rs  generate.rs  incremental.rs  lib.rs  page.rs  scaffold.rs  template.rs  tui_model.rs
crates/kbauto-template/tests/: details_test.rs  discovery_test.rs  generate_test.rs  incremental_test.rs  load_test.rs  tui_test.rs
