[workspace]
resolver = "2"
members = [
    "crates/kbauto-placeholder",
    "crates/kbauto-provenance",
    "crates/kbauto-template",
    "crates/kbauto-customise",
    "crates/kbauto-rebase",
    "crates/kbauto-config",
    "crates/kbauto-cli",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
regex = "1"
pulldown-cmark = "0.12"
toml = "0.8"
dirs = "6"
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2"
async-trait = "0.1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# Internal crate dependencies
kbauto-placeholder = { path = "crates/kbauto-placeholder" }
kbauto-provenance = { path = "crates/kbauto-provenance" }
kbauto-template = { path = "crates/kbauto-template" }
kbauto-customise = { path = "crates/kbauto-customise" }
kbauto-rebase = { path = "crates/kbauto-rebase" }
kbauto-config = { path = "crates/kbauto-config" }