[package]
name = "kbauto-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI entry point for kbauto — knowledge base playbook automation"

[[bin]]
name = "kbauto"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kbauto-placeholder = { workspace = true }
kbauto-provenance = { workspace = true }
kbauto-template = { workspace = true }
kbauto-customise = { workspace = true }
kbauto-rebase = { workspace = true }
kbauto-config = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }