[package]
name = "kbauto-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Configuration file loading and CLI override merging for kbauto"

[dependencies]
serde = { workspace = true }
toml = "0.8"
dirs = "6"
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }