[package]
name = "kbauto-placeholder"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Placeholder extraction, schema building, and resolution for kbauto templates"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }