[package]
name = "kbauto-template"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Template loading, defaults management, and playbook generation for kbauto"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
kbauto-placeholder = { workspace = true }
kbauto-provenance = { workspace = true }
kbauto-customise = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }